Lots of time spent under DNSResolveQueue::platformProxyIsEnabledInSystemPreferences https://bugs.webkit.org/show_bug.cgi?id=100514

Reviewed by Anders Carlsson.

DNSResolveQueue::platformProxyIsEnabledInSystemPreferences gets called for every link in
the document. The function is relatively slow.

This patch caches the result of the last check for 5 seconds. Based on code comments
prefetching is disabled with proxies due to regressing performance with some configurations.
Proxy status changes rarely and a slight reaction delay shoudn't cause practical problems.

* platform/network/DNSResolveQueue.cpp:
(WebCore::DNSResolveQueue::DNSResolveQueue):

    Add constructor. Also fixes a bug, m_requestsInFlight was not initialized.

(WebCore):
(WebCore::DNSResolveQueue::isUsingProxy):
(WebCore::DNSResolveQueue::add):
(WebCore::DNSResolveQueue::fired):
* platform/network/DNSResolveQueue.h:
(DNSResolveQueue):



Canonical link: https://commits.webkit.org/118573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132664 268f45cc-cd09-0410-ab3c-d52691b4dbfc